UP-4801:  Autoformat Java Code to Google AOSP Java Style Guide